src/styles/main.less
html {
  height: 100%
}

body {
  min-height: 100%;

  display: flex;
  align-items: center;
  justify-content: center;

  font-family: 'Roboto', sans-serif;
  font-size: 16px;
}

section {
  display: block;
}

ul {
  padding: 0;
  list-style-type: none;

  li {
    display: inline;
    padding: 0 1em;
  }
}

